# Neuro-resume-backend

./: .dockerignore  .env.example  .gitignore  API_HANDLERS.md  Dockerfile  README.md  SETUP_COMPLETE.md  TEST_RESULTS.md  docker-compose.yml  main.py  openapi.yaml  pyproject.toml  requirements.txt  resume.md  start.sh
.github/: copilot-instructions.md  copilot-tasks.md
.github/workflows/: docker-publish.yml
api/: neuro-resume.postman_collection.json
app/: __init__.py  config.py  main.py
app/db/: connection.py
app/handlers/: __init__.py  auth.py  interview.py  resume.py  user.py
app/models/: __init__.py  common.py  resume.py  session.py  user.py
app/repository/: __init__.py  resume.py  session.py  user.py
app/services/: __init__.py  gemini.py
app/utils/: security.py
docker/: entrypoint.sh
migrations/: README.md  env.py
migrations/versions/: 001_create_users.py  002_create_sessions.py  003_create_resumes.py  003_resume_binary_storage.py  004_drop_language.py  005_add_llm_conversation_id.py  423d36648edf_add_location_to_users.py
scripts/: fix_tests.py  migrate.sh  openapi_json_to_yaml.py  run_linters.sh  run_tests.sh  setup_database.sh  setup_test_database.sh  test_api.sh  test_jwt.py
tests/: conftest.py  test_auth.py  test_config.py  test_interview.py  test_resume.py  test_user.py
